--- a/test/fixtures/reactions.yml
+++ b/test/fixtures/reactions.yml
@@ -9,3 +9,10 @@ most_recent:
   user: jane
   post: cats
   created_at: <%= Time.zone.now %>
+
+<% 50.times.each do |n| %>
+user_<%= n %>_reaction_to_jane_post:
+  user: user_<%= n %>
+  post: jane_post_1
+  created_at: <%= 2.days.ago %>
+<% end %>
