--- a/test/fixtures/reactions.yml
+++ b/test/fixtures/reactions.yml
@@ -11,7 +11,12 @@ most_recent:
   created_at: <%= Time.zone.now %>
 
 <% 50.times.each do |n| %>
-user_<%= n %>_reaction_to_jane_post:
+user_<%= n %>_reaction_to_john_post_<%= n %>:
+  user: user_<%= n %>
+  post: john_post_1
+  created_at: <%= 2.days.ago %>
+
+user_<%= n %>_reaction_to_jane_post_<%= n %>:
   user: user_<%= n %>
   post: jane_post_1
   created_at: <%= 2.days.ago %>
